--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,9 +4,16 @@
   | default @import url()
   |============================
 */
-@import url('./reset.css');
-@import url('./vite-promo.css');
 @import url('./header.css');
+@import url('./favorites.css');
+@import url('./footer.css');
+@import url('./hero.css');
+@import url('./main.css');
+@import url('./mobile-menu.css');
+@import url('./modal.css');
+@import url('./offers.css');
+@import url('./reviews.css');
+@import url('./subscription.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
