--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,21 +1,40 @@
-.header {
-  padding: 20px 0;
+/* Header */
+
+.page-header {
+  box-shadow: 0px 4px 24px 0px rgba(105, 105, 105, 0.1);
 }
 
-.nav-list {
+.header-container {
   display: flex;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  justify-content: space-between;
   align-items: center;
-  justify-content: flex-end;
-  gap: 40px;
 }
 
-.nav-link {
+/* Navigation-menu */
+
+.navigation {
+  display: none;
+}
+
+.main-button {
+  font-size: 13px;
   font-weight: 500;
-  letter-spacing: 0.02em;
   line-height: 1.5;
+  display: block;
+  min-width: 98px;
+  height: 32px;
+  margin-left: 30px;
+  border-radius: 30px;
+  background-color: #bbf330;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
+.main-button:hover,
+.main-button:focus,
+.hero-button:hover,
+.hero-button:focus {
+  background-color: #ffe450;
 }
