--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,29 +4,21 @@
   | default @import url()
   |============================
 */
-@import url('./header.css');
-@import url('./favorites.css');
-@import url('./footer.css');
-@import url('./hero.css');
+@import url('./reset.css');
 @import url('./main.css');
-@import url('./mobile-menu.css');
-@import url('./modal.css');
+@import url('./header.css');
+@import url('./hero.css');
 @import url('./offers.css');
+@import url('./favorites.css');
 @import url('./reviews.css');
 @import url('./subscription.css');
+@import url('./footer.css');
+
+@import url('./mobile-menu.css');
+@import url('./modal.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  font-family: Roboto, sans-serif;
+  color: #2c2c2c;
+  background-color: #fefefe;
 }
