--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,41 @@
-<header class="header">
-  <nav class="nav">
-    <ul class="nav-list">
-      <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
-      </li>
+<!-- Header -->
+<header class="page-header">
+  <div class="container header-container">
+    <!-- Logo -->
+    <a href="./index.html">
+      <svg width="66" height="52">
+        <use href="./images/icons.svg#icon-logo"></use>
+      </svg>
+    </a>
 
-      <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
-      </li>
-    </ul>
-  </nav>
+    <!-- Navigation -->
+    <nav class="navigation">
+      <!-- Navigation-menu -->
+      <ul class="navigation-menu">
+        <li class="list-navigation">
+          <a href="./index.html">Home</a>
+        </li>
+        <li class="list-navigation">
+          <a href="">About</a>
+        </li>
+        <li class="list-navigation">
+          <a href="">Service</a>
+        </li>
+        <li class="list-navigation">
+          <a href="">Menu</a>
+        </li>
+        <li class="list-navigation">
+          <a href="">Contact</a>
+        </li>
+      </ul>
+      <button class="main-button" type="button" data-modal-open>
+        Order Now
+      </button>
+    </nav>
+    <button class="burger-menu-button" type="button" data-menu-open>
+      <svg class="burger-menu-button-icon" width="28" height="28">
+        <use href="./images/icons.svg#icon-burger-menu"></use>
+      </svg>
+    </button>
+  </div>
 </header>
