--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -38,3 +38,100 @@ h1 {
 .hero-image {
   display: none;
 }
+
+/* TABLET STYLES */
+
+@media screen and (min-width: 768px) {
+  /* Hero-section-tablet */
+
+  .hero {
+    padding-bottom: 58px;
+  }
+
+  h1 {
+    font-size: 42px;
+    margin-bottom: 28px;
+    line-height: 1.2;
+    width: 537px;
+  }
+
+  .hero-text {
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 40px;
+    width: 336px;
+  }
+
+  .hero-container {
+    position: relative;
+  }
+
+  .main-image {
+    position: absolute;
+    top: 89px;
+    right: 40px;
+  }
+
+  .hero-image {
+    display: flex;
+    border-radius: 50%;
+    border: 14px solid #ffe550;
+    width: 320px;
+    height: 320px;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .hero-image:hover,
+  .hero-image:focus {
+    border: 14px solid #bbf330;
+  }
+}
+
+/* DESKTOP STYLES */
+
+@media screen and (min-width: 1280px) {
+  /* Hero-section-desktop */
+
+  .hero {
+    padding-top: 14px;
+    padding-bottom: 69px;
+  }
+
+  .list-navigation a {
+    color: #2c2c2c;
+  }
+
+  .hero-container {
+    padding-right: 30px;
+    justify-content: space-between;
+  }
+
+  .text-container {
+    padding-top: 145px;
+  }
+
+  h1 {
+    font-size: 48px;
+    width: 502px;
+  }
+
+  .hero-text {
+    width: 511px;
+  }
+
+  .main-image {
+    position: static;
+  }
+
+  .hero-image {
+    border: 26px solid #ffe550;
+    width: 580px;
+    height: 580px;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .hero-image:hover,
+  .hero-image:focus {
+    border: 26px solid #bbf330;
+  }
+}
