--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,3 +14,23 @@
     max-width: 320px;
   }
 }
+
+/* TABLET STYLES */
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+}
+
+/* DESKTOP STYLES */
+
+@media screen and (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
