ready 1.1 добавить favicon

--- a/src/partials/favorites.html
+++ b/src/partials/favorites.html
@@ -23,6 +23,15 @@
               "
               type="image/png"
             />
+            <!-- Mobile -->
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ./images/mobile/gamburger-mobile.png    1x,
+                ./images/mobile/gamburger-mobile@2x.png 2x
+              "
+              type="image/jpg"
+            />
             <img
               class="our-favorite-image"
               src="./images/gamburger.png"
@@ -51,6 +60,15 @@
               "
               type="image/png"
             />
+            <!-- Mobile -->
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ./images/mobile/pasta-mobile.png    1x,
+                ./images/mobile/pasta-mobile@2x.png 2x
+              "
+              type="image/jpg"
+            />
             <img
               class="our-favorite-image"
               src="./images/pasta.png"
@@ -78,6 +96,15 @@
                 ./images/tablet/pizza-tablet@2x.png 2x
               "
               type="image/png"
+            />
+            <!-- Mobile -->
+            <source
+              media="(max-width: 767px)"
+              srcset="
+                ./images/mobile/pizza-mobile.png    1x,
+                ./images/mobile/pizza-mobile@2x.png 2x
+              "
+              type="image/jpg"
             />
             <img
               class="our-favorite-image"
