--- a/src/partials/offers.html
+++ b/src/partials/offers.html
@@ -17,10 +17,19 @@
           <source
             media="(min-width: 768px)"
             srcset="
-              ./images/tablet/shadow-apple.png    1x,
-              ./images/tablet/shadow-apple@2x.png 2x
+              ./images/tablet/shadow-apple-tablet.png    1x,
+              ./images/tablet/shadow-apple-tablet@2x.png 2x
             "
             type="image/png"
+          />
+          <!-- Mobile -->
+          <source
+            media="(max-width: 767px)"
+            srcset="
+              ./images/mobile/shadow-apple-mobile.png    1x,
+              ./images/mobile/shadow-apple-mobile@2x.png 2x
+            "
+            type="image/jpg"
           />
           <img
             class="our-offers-image-second"
@@ -45,6 +54,15 @@
               ./images/tablet/aple-tablet@2x.png 2x
             "
             type="image/png"
+          />
+          <!-- Mobile -->
+          <source
+            media="(max-width: 767px)"
+            srcset="
+              ./images/mobile/apple-mobile.png    1x,
+              ./images/mobile/apple-mobile@2x.png 2x
+            "
+            type="image/jpg"
           />
           <img
             class="our-offers-image"
