--- a/src/partials/favorites.html
+++ b/src/partials/favorites.html
@@ -150,7 +150,7 @@
             <!-- Desktop -->
             <source
               media="(min-width: 1158px)"
-              srcset="./images/images/salat.png 1x, ./images/salat@2x.png 2x"
+              srcset="./images/salat.png 1x, ./images/salat@2x.png 2x"
               type="image/png"
             />
             <!-- Tablet -->
