--- a/src/partials/favorites.html
+++ b/src/partials/favorites.html
@@ -1,6 +1,6 @@
 <!-- Our-favorites -->
 
-<section class="our-favorites">
+<section class="our-favorites" id="menu">
   <div class="container">
     <h2 class="our-favorites-title">Some of Our Favorites</h2>
     <p class="our-favorites-text">Looking for something delicious?</p>
