--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,8 +1,8 @@
 <!-- Header -->
-<header class="page-header">
+<header class="page-header" id="home">
   <div class="container header-container">
     <!-- Logo -->
-    <a href="./index.html">
+    <a href="#home">
       <svg width="66" height="52">
         <use href="./images/icons.svg#icon-logo"></use>
       </svg>
@@ -13,16 +13,16 @@
       <!-- Navigation-menu -->
       <ul class="navigation-menu">
         <li class="list-navigation">
-          <a href="./index.html">Home</a>
+          <a href="#home">Home</a>
         </li>
         <li class="list-navigation">
-          <a href="">About</a>
+          <a href="#about">About</a>
         </li>
         <li class="list-navigation">
-          <a href="">Service</a>
+          <a href="#service">Service</a>
         </li>
         <li class="list-navigation">
-          <a href="">Menu</a>
+          <a href="#menu">Menu</a>
         </li>
         <li class="list-navigation">
           <a href="">Contact</a>
