--- a/src/partials/offers.html
+++ b/src/partials/offers.html
@@ -1,5 +1,5 @@
 <!-- Our-offers -->
-<section class="our-offers">
+<section class="our-offers" id="about">
   <div class="container our-offers-container">
     <div class="our-offers-image-container">
       <div class="background-image">
