--- a/src/partials/subscription.html
+++ b/src/partials/subscription.html
@@ -1,5 +1,5 @@
 <!-- Subscription -->
-<section class="subscription">
+<section class="subscription" id="service">
   <div class="container subscription-container">
     <div class="subscription-text-container">
       <h2 class="subscription-title">Subscribe To Get Special Offers</h2>
