--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
     <!-- Logo-footer -->
     <div class="navigation-sudscride">
       <div class="main-navigation-footer">
-        <a href="./index.html"
+        <a href="#home"
           ><svg width="66" height="52">
             <use href="./images/icons.svg#icon-logo"></use>
           </svg>
@@ -15,16 +15,16 @@
           <!-- Navigation-menu-footer -->
           <ul class="navigation-menu">
             <li class="navigation-menu-footer">
-              <a href="./index.html">Home</a>
+              <a href="#home">Home</a>
             </li>
             <li class="navigation-menu-footer">
-              <a href="">About</a>
+              <a href="#about">About</a>
             </li>
             <li class="navigation-menu-footer">
-              <a href="">Service</a>
+              <a href="#service">Service</a>
             </li>
             <li class="navigation-menu-footer">
-              <a href="">Menu</a>
+              <a href="#menu">Menu</a>
             </li>
             <li class="navigation-menu-footer">
               <a href="">Contact</a>
